# near-ledger-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release-plz.yml  rust.yml
examples/: blind_sign_transaction.rs  get_public_key.rs  get_version.rs  get_wallet_id.rs  open_application.rs  sign_nep_366_delegate_action.rs  sign_nep_366_delegate_action_simple.rs  sign_nep_413_message.rs  sign_transaction.rs
examples/common/: lib.rs
examples/get_public_key/: display.rs  silent.rs
examples/sign_transaction/: add_key_fullaccess.rs  add_key_functioncall.rs  batch_all_actions.rs  create_account.rs  delegate.rs  delete_account_long.rs  delete_account_short.rs  delete_key_ed25519.rs  delete_key_secp256k1.rs  deploy_contract.rs  functioncall_bin.rs  functioncall_str.rs  functioncall_str_ascii_subrange.rs  functioncall_str_newline.rs  functioncall_str_parse_err.rs  functioncall_utf8.rs  multiple_transfers.rs  stake.rs  transfer.rs
src/: lib.rs  print_apdus.rs
