[package]
name = "near-ledger"
version = "0.1.3"
edition = "2018"
authors = ["Bohdan Khorolets <b@khorolets.com>"]
description = "Transport library to integrate with NEAR Ledger app"
repository = "https://github.com/khorolets/near-ledger-rs/"
license = "GPL-3.0-or-later"
keywords = ["ledger", "nearprotocol"]

[dependencies]
ed25519-dalek = { version = "1" }
ledger-transport = "0.10.0"
ledger-transport-hid = "0.10.0"
ledger-apdu = "0.10.0"
slip10 = "0.4.3"
