[package]
name = "near-ledger"
version = "0.6.0"
edition = "2018"
authors = ["Bohdan Khorolets <b@khorolets.com>"]
description = "Transport library to integrate with NEAR Ledger app"
repository = "https://github.com/khorolets/near-ledger-rs/"
license = "GPL-3.0-or-later"
keywords = ["ledger", "nearprotocol"]

[[example]]
name = "get_version"

[[example]]
name = "get_public_key_display"
path = "examples/get_public_key/display.rs"

[[example]]
name = "get_public_key_silent"
path = "examples/get_public_key/silent.rs"

[[example]]
name = "get_wallet_id"
path = "examples/get_wallet_id.rs"

[[example]]
name = "sign_transfer"
path = "examples/sign_transaction/transfer.rs"

[[example]]
name = "sign_create_account"
path = "examples/sign_transaction/create_account.rs"

[[example]]
name = "sign_delete_account_short"
path = "examples/sign_transaction/delete_account_short.rs"

[[example]]
name = "sign_delete_account_long"
path = "examples/sign_transaction/delete_account_long.rs"

[[example]]
name = "sign_delete_key_ed25519"
path = "examples/sign_transaction/delete_key_ed25519.rs"

[[example]]
name = "sign_delete_key_secp256k1"
path = "examples/sign_transaction/delete_key_secp256k1.rs"

[[example]]
name = "sign_stake"
path = "examples/sign_transaction/stake.rs"

[[example]]
name = "sign_add_key_fullaccess"
path = "examples/sign_transaction/add_key_fullaccess.rs"

[[example]]
name = "sign_add_key_functioncall"
path = "examples/sign_transaction/add_key_functioncall.rs"

[[example]]
name = "sign_deploy_contract"
path = "examples/sign_transaction/deploy_contract.rs"

[[example]]
name = "sign_functioncall_str"
path = "examples/sign_transaction/functioncall_str.rs"

[[example]]
name = "sign_functioncall_bin"
path = "examples/sign_transaction/functioncall_bin.rs"

[[example]]
name = "sign_functioncall_str_parse_err"
path = "examples/sign_transaction/functioncall_str_parse_err.rs"

[[example]]
name = "sign_batch_all_actions"
path = "examples/sign_transaction/batch_all_actions.rs"

[[example]]
name = "sign_nep_413_message"
path = "examples/sign_nep_413_message.rs"

[[example]]
name = "sign_nep_366_delegate_action"
path = "examples/sign_nep_366_delegate_action.rs"

[dependencies]
ed25519-dalek = { version = "1" }
ledger-transport = "0.11.0"
ledger-transport-hid = "0.11.0"
ledger-apdu = "0.11.0"
slip10 = "0.4.3"
log = "0.4.20"
hex = "0.4.3"
near-primitives-core = "0.22.0"
near-primitives = "0.22.0"

[dev-dependencies]
env_logger = "0.11.0"
near-crypto = "0.22.0"
near-primitives = "0.22.0"
near-account-id = { version = "1.0.0", features = ["internal_unstable"] }
